microshift/host-process/network-policy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
spec:
  replicas: 10
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      role: client
  template:
    metadata:
      labels:
        role: client
    spec:
      containers:
      - name: app
        image: quay.io/zshi/centos:httpd-iperf
        command: [ "/bin/bash", "-c", "--" ]
        args: [ "while true; do sleep 300000; done;" ]
        imagePullPolicy: IfNotPresent
