microshift/host-process/network-policy/pods.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  namespace: default
  labels:
    role: db
spec:
  containers:
  - name: appcntr1
    image: quay.io/zshi/centos:httpd-iperf
    imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Pod
metadata:
  name: pod2
  namespace: default
  labels:
    role: frontend
spec:
  containers:
  - name: appcntr2
    image: quay.io/zshi/centos:httpd-iperf
    imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Pod
metadata:
  name: pod3
  namespace: default
  labels:
    role: backend
spec:
  containers:
  - name: appcntr3
    image: quay.io/zshi/centos:httpd-iperf
    imagePullPolicy: IfNotPresent
